--- a/src/wysiwym.css
+++ b/src/wysiwym.css
@@ -1,10 +1,10 @@
 #wysiwym-form{}
 .wysiwym-preview{}
 .wysiwym-textarea{width:100%; height:300px;}
-a.minibutton {display:inline-block;height:23px;padding:0 0 0 3px;font-size:11px;font-weight:bold;color:#333;text-shadow:1px 1px 0 #fff; background:url(http://github.com/images/modules/buttons/minibutton_matrix.png) 0 0 no-repeat;white-space:nowrap;border:none;overflow:visible;cursor:pointer;text-decoration:none;}
-a.minibutton>span {display:block;height:23px;padding:0 10px 0 8px;line-height:23px;background:url(http://github.com/images/modules/buttons/minibutton_matrix.png) 100% 0 no-repeat;}
-a.minibutton:hover, a.minibutton:focus {color:#fff;text-decoration:none;text-shadow:-1px -1px 0 rgba(0,0,0,0.3);background-position:0 -30px;}
-a.minibutton:hover>span, a.minibutton:focus>span {background-position:100% -30px;}
-a.minibutton.mousedown{background-position:0 -60px; }
-a.minibutton.mousedown>span{background-position:100% -60px; }
+a.wysiwym-button {float:right;display:inline-block;height:23px;padding:0 0 0 3px;font-size:11px;font-weight:bold;color:#333;text-shadow:1px 1px 0 #fff; background:url(http://github.com/images/modules/buttons/minibutton_matrix.png) 0 0 no-repeat;white-space:nowrap;border:none;overflow:visible;cursor:pointer;text-decoration:none;}
+a.wysiwym-button>span {display:block;height:23px;padding:0 10px 0 8px;line-height:23px;background:url(http://github.com/images/modules/buttons/minibutton_matrix.png) 100% 0 no-repeat;}
+a.wysiwym-button:hover, a.wysiwym-button:focus {color:#fff;text-decoration:none;text-shadow:-1px -1px 0 rgba(0,0,0,0.3);background-position:0 -30px;}
+a.wysiwym-button:hover>span, a.wysiwym-button:focus>span {background-position:100% -30px;}
+a.wysiwym-button.mousedown{background-position:0 -60px; }
+a.wysiwym-button.mousedown>span{background-position:100% -60px; }
 
